# projectP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_QUALITY.md  CRM_BACKLOG.md  DECISIONS.md  Dockerfile  PROJECT_AUDIT.md  ROADMAP.md  SECURITY.md  SPRINT_PLAN.md  alembic.ini  babel.cfg  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260328_000001_initial.py  20260329_000002_unique_open_ticket.py  20260329_000003_broadcast_jobs.py  20260329_000004_broadcast_delivery_audit.py  20260330_000005_service_id_and_app_links.py  20260330_000006_broadcast_run_at.py  20260401_000007_invoice_applying_and_runtime_indexes.py  20260402_000008_landing_settings.py  20260403_000009_user_profile_names.py  20260403_000010_app_settings.py  20260405_000011_subscription_cycle_extra_traffic.py  20260405_000012_marzban_page_settings.py  20260405_000013_drop_legacy_landing.py  20260405_000014_node_registry.py  20260405_000015_routing_profiles.py  20260409_000016_support_ticket_rework.py  20260410_000017_subscription_url_canonical_repair.py  20260410_000018_broadcast_jobs_rich_payload.py  20260410_000019_tariff_constructor_rework.py  20260411_000020_node_registry_sync_fields.py  20260412_000021_marzban_page_button_visibility.py  20260507_000022_invoice_idempotency_key.py  20260507_000023_audit_logs_created_at_index.py  20260507_000024_outbox_messages.py  20260509_000025_notification_rules.py  20260510_000034_llm_configs.py  (+17 more)
app/: config.py  i18n.py  main.py  scheduler.py  webhooks.py
docs/: i18n.md
(+133 files in other folders)
